alternate version of paper proposed by jorge 5/11

--- a/abc_comprehensivecba_appendix-pub.tex
+++ b/abc_comprehensivecba_appendix-pub.tex
@@ -56,8 +56,8 @@
 \setcounter{table}{0}   \renewcommand{\thetable}{F.\arabic{table}}
 \input{Appendices/Health}
 
-\setcounter{figure}{0}  \renewcommand{\thefigure}{I.\arabic{figure}}
-\setcounter{table}{0}   \renewcommand{\thetable}{I.\arabic{table}}
+\setcounter{figure}{0}  \renewcommand{\thefigure}{G.\arabic{figure}}
+\setcounter{table}{0}   \renewcommand{\thetable}{G.\arabic{table}}
 \input{Appendices/Sensitivity}
 
 \end{appendices}
