--- a/output/summarymethod.tex
+++ b/output/summarymethod.tex
@@ -24,11 +24,11 @@ Parental Labor & 0 to 21  & Linear Interpolation       &   N/A & N/A & N/A  \\
                         &               & Ages 1.5, 2.5, 3.5, 8,    &   &       &    \\
                         &               & 12, 15, 21)                     &    &      &    \\  \midrule
                         
-Crime              & up to Mid-30's &  Observed$^*$                   &   N/A & N/A & N/A   \\ 
+Crime              & up to Mid 30s &  Observed$^*$                   &   N/A & N/A & N/A   \\ 
 (Arrests and    &                       & (Combines Administrative & & & \\ 
  Sentences)    &                        &   and Self-reported Data)  & & & \\ \midrule
                        
-Crime              & Mid-30's to 50  & Based on Prediction Model      & Use Full Auxiliary     & Lagged Crime Outcomes & NCDPS \\ 
+Crime              & Mid 30s to 50  & Based on Prediction Model      & Use Full Auxiliary     & Lagged Crime Outcomes & NCDPS \\ 
 (Arrests and    &                       & in the Auxiliary Sample             & Sample  to Predict   &   (all outcomes listed in Table~\ref{tab:crime_cat}) & \\   
  Sentences)    &                        & (One Prediction per Arrest       & Control and Treat- & & \\ 
                        &                        & or Sentence)                            & ment Outcomes& & \\  \midrule
