--- a/heckman.bib
+++ b/heckman.bib
@@ -1,6 +1,27 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
+@Article{Attanasio-etal_2011_AEJAE,
+  Title                    = {{S}ubsidizing {V}ocational {T}raining for {D}isadvantaged {Y}outh in {C}olombia: Evidence from a Randomized Trial},
+  Author                   = {Attanasio, Orazio and Kugler, Adriana and Meghir, Costas},
+  Journal                  = {American Economic Journal: Applied Economics},
+  Year                     = {2011},
+  Number                   = {3},
+  Pages                    = {188--220},
+  Volume                   = {3},
+}
+
+@TechReport{manasi,
+  Title                    = {Whoe is Screaned Out? Applications and Costs and the Targeting of Disability Programs},
+  Author                   = {Deshpande, Manasi and Li, Yue},
+  Institution              = {NBER},
+  Year                     = {2017},
+  Type                     = {{W}orking {P}aper},
+
+  Timestamp                = {2008.11.29}
+}
+
+
 @article{golding2016psychology,
   title={PSYCHOLOGY OF BOYS AT RISK: INDICATORS FROM 0--5},
   author={Golding, Paul and Fitzgerald, Hiram E},
