corrected parental_health_labor

--- a/output/venn_pooled.tex
+++ b/output/venn_pooled.tex
@@ -31,7 +31,7 @@
 \draw (0.25, 1.75) node[align=center, below] {\footnotesize \%8.5 \\ \footnotesize \textbf{2.9}  }; 					%ABC
 \draw (3.25,-1.9) node[align=center, below] {\footnotesize \textbf{\%6.3} \\ \footnotesize  \textbf{3.1}}; 						%ABD
 \draw (0.75,-2.1) node[align=center, below] {\footnotesize \textbf{\%11.4} \\ \footnotesize \textbf{3.7}  }; 			%ACD
-\draw (3.25, 1.75) node[align=center, below] {\footnotesize \%6.1 \\ \footnotesize 1.7}; 					%BCD
+\draw (3.25, 1.75) node[align=center, below] {\footnotesize \textbf{\%8.2} \\ \footnotesize \textbf{3.06}}; 					%BCD
 \draw (1.75,0) node[align=center, below] {\footnotesize \textbf{\%13.7} \\ \footnotesize \textbf{7.3} }; 													%ABCD
 
 
