--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -2,7 +2,24 @@
 
 \subsection{Overview}
 
-\noindent The Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) were high-quality early childhood education programs each with two phases of randomized controlled design. They were both implemented at the Frank Porter Graham Center (FPGC) of the University of North Carolina in Chapel Hill. ABC served four cohorts of children born between 1972 and 1977, and CARE served two cohorts of children born between 1977 and 1980. In this section of the appendix, we expand on important details of the eligibility requirements, the randomization protocol, and the programmatic contents of both programs.
+\noindent The Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) were high-quality early childhood education programs each with two phases of randomized controlled design. They were both implemented at the Frank Porter Graham Center (FPGC) of the University of North Carolina in Chapel Hill. ABC served four cohorts of children born between 1972 and 1977, and CARE served two cohorts of children born between 1977 and 1980. In this section of the appendix, we expand on important details of the eligibility requirements, the randomization protocol, and the programmatic contents of both programs. Table~\ref{tab:programcomparison}. offers a visual summary and comparison of the two programs.
+
+\begin{table}[!htbp]
+\centering
+\caption{ABC and CARE, Program Comparison} \label{tab:programcomparison}
+\begin{adjustbox}{max width=\textwidth}
+\begin{threeparttable}
+	\small
+	\input{output/abccare_programcomparison.tex}
+\begin{tablenotes}
+\small
+\item Note: This table compares the main elements of ABC and CARE, summarized in this section. A \checkmark\ indicates that ABC and CARE had the same feature. A blank space indicates that the indicated component was not part of the program.\\
+    $^*$ As documented in Appendix~\ref{app:eligibility-pop}, there were losses in the initial samples due to death, parental moving, and diagnoses of mental pathologies for the children.
+\end{tablenotes}
+\end{threeparttable}
+\end{adjustbox}
+\end{table}
+
 
 \subsection{Eligibility Criteria and Populations Served}\label{app:eligibility-pop}
 
@@ -223,7 +240,7 @@ Figure~\ref{fig:salmonella} shows enrollment by age and the average months of en
 \footnotesize \justify
 Note: Panel (a) displays the fraction of the ABC/CARE control group enrolled in alternatives by age on the left axis and average number of months in alternative preschool by age in the right axis. Panel (b) displays the fraction of children in the ABC/CARE control groups enrolled in alternatives 20\%, 40\%, 60\%, 80\%, and 100\% of the time, from ages 0 to 5.\\
 \end{sidewaysfigure}
- 
+
 
 \begin{sidewaystable}[H]
 \centering
@@ -359,3 +376,51 @@ Note: This plot shows the number of participants in ABC for whom there exists da
 \input{output/health_balance_care_1}
 
 \noindent Overall, these tables indicate a balance between the treatment and control groups, both when considering center-based childcare and family education and only family education as treatment.
+
+
+\subsection{Details on Educare}
+
+\begin{table}[H]
+\caption{Educare -- ABC/CARE Comparison}
+\begin{center}
+\includegraphics[width=0.9\textwidth]{output/Educare-Comp-table}
+\end{center}
+{\flushleft \footnotesize Note: This table compares ABC/CARE to Educare (and then the clarifications on the symbols currently in place). (CARE and ABC are the same, except for the home policy visit noted in the last block below.)\\}
+\end{table}
+
+
+\begin{table}[H]
+\caption{Educare Programs in the United Stated}
+\begin{center}
+\begin{tabular}{llcc}
+\toprule
+\textbf{State} & \textbf{Program Name} & \textbf{Currently Served} & \textbf{Program Start} \\
+\midrule
+Arizona & Educare Arizona & 191 & 2011\\
+Atlanta & Educare Atlanta & 215 & 2012 \\
+California & Educare California at Silicon Valley & 168 & 2015 \\
+California & Educare Los Angeles at Long Beach & 190 & 2018 \\
+Colorado & Educare Denver & 120 & 2007 \\
+DC & Educare Washington, DC & 166 & 2012 \\
+Florida & Educare Miami-Dade & 116 & 2008 \\
+Illinois & Educare Chicago & 146 & 2000 \\
+Illinois & Educare West DuPage & 150 & 2012 \\
+Kansas & Educare Kansas City & 132 & 2010 \\
+Louisiana & Educare New Orleans & 168 & 2013 \\
+Maine & Educare Central Maine & 116  &  2010 \\
+Nebraska & Educare Lincoln & 158 & 2013 \\
+Nebraska & Educare Omaha at Kellom & 156 & 2003 \\
+Nebraska & Educare Omaha at Indian Hill & 191 & 2009 \\
+Nebraska & Educare Winnebago & 175 & 2014 \\
+Oklahoma & Educare Oklahoma City & 212 &  2009 \\
+Oklahoma & Educare Tulsa at Kendall-Whittier & 196 & 2006 \\
+Oklahoma & Educare Tulsa at Hawthorne & 160 &  2010 \\
+Oklahoma & Educare Tulsa at MacArthur & 164 & 2012 \\
+Washington & Educare Seattle & 156 &  2010 \\
+Wisconsin & Educare Milwaukee & 166 &  2005 \\
+\bottomrule
+\end{tabular}
+\end{center}
+{\flushleft \footnotesize Note: This table lists and details the current Educare programs in the United States.\\}
+\end{table}
+
