--- a/heckman.bib
+++ b/heckman.bib
@@ -1,78 +1,6 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
-@Article{Attanasio-etal_2011_AEJAE,
-  Title                    = {{S}ubsidizing {V}ocational {T}raining for {D}isadvantaged {Y}outh in {C}olombia: Evidence from a Randomized Trial},
-  Author                   = {Attanasio, Orazio and Kugler, Adriana and Meghir, Costas},
-  Journal                  = {American Economic Journal: Applied Economics},
-  Year                     = {2011},
-  Number                   = {3},
-  Pages                    = {188--220},
-  Volume                   = {3},
-}
-
-@TechReport{manasi,
-  Title                    = {Whoe is Screaned Out? Applications and Costs and the Targeting of Disability Programs},
-  Author                   = {Deshpande, Manasi and Li, Yue},
-  Institution              = {NBER},
-  Year                     = {2017},
-  Type                     = {{W}orking {P}aper},
-
-  Timestamp                = {2008.11.29}
-}
-
-
-@article{golding2016psychology,
-  title={PSYCHOLOGY OF BOYS AT RISK: INDICATORS FROM 0--5},
-  author={Golding, Paul and Fitzgerald, Hiram E},
-  journal={Infant Mental Health Journal},
-  year={2016},
-  publisher={Wiley Online Library}
-}
-
-@article{lundberg2005sons,
-  title={Sons, daughters, and parental behaviour},
-  author={Lundberg, Shelly},
-  journal={Oxford Review of Economic Policy},
-  volume={21},
-  number={3},
-  pages={340--356},
-  year={2005},
-  publisher={Oxford Univ Press}
-}
-
-@article{cornwell2013noncognitive,
-  title={Noncognitive skills and the gender disparities in test scores and teacher assessments: Evidence from primary school},
-  author={Cornwell, Christopher and Mustard, David B and Van Parys, Jessica},
-  journal={Journal of Human Resources},
-  volume={48},
-  number={1},
-  pages={236--264},
-  year={2013},
-  publisher={University of Wisconsin Press}
-}
-
-@article{golsteyn2014gender,
-  title={Gender gaps in primary school achievement: A decomposition into endowments and returns to IQ and non-cognitive factors},
-  author={Golsteyn, Bart HH and Schils, Trudie},
-  journal={Economics of Education Review},
-  volume={41},
-  pages={176--187},
-  year={2014},
-  publisher={Elsevier}
-}
-
-@TechReport{kottelenberg_Gender,
-  Title                    = {The Gender Effects of Universal Child Care in Canada: Much ado about Boys},
-  Author                   = {Kottelenberg, Michael J and Lehrer, Steven F},
-  Institution              = {NBER},
-  Year                     = {2014},
-  Type                     = {{W}orking {P}aper},
-
-  Timestamp                = {2008.11.29}
-}
-
-
 
 @TechReport{dHaultfoeuille_CompCondition,
   Title                    = {On the Completeness Condition in Nonparametric Instrumental Problems},
@@ -4286,6 +4214,19 @@
 
   Owner                    = {HeckType},
   Timestamp                = {2015.02.27}
+}
+
+@Article{Attanasio_Kugler_Meghir_2011_AEJAE,
+  Title                    = {Subsidizing Vocational Training for Disadvantaged Youth in {C}olombia: Evidence from a Randomized Trial},
+  Author                   = {Attanasio, Orazio and Kugler, Adriana and Meghir, Costas},
+  Journal                  = {American Economic Journal: Applied Economics},
+  Year                     = {2011},
+  Number                   = {3},
+  Pages                    = {188--220},
+  Volume                   = {3},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2017.05.14}
 }
 
 @Article{AttanasioBrowning1995,
@@ -9899,6 +9840,19 @@
   Year                     = {1982},
 
   Address                  = {Washington, DC}
+}
+
+@Article{Bloom_Michalopoulos_2013_PS,
+  Title                    = {When is the Story in the Subgroups?},
+  Author                   = {Bloom, Howard S. and Michalopoulos, Charles},
+  Journal                  = {Prevention Science},
+  Year                     = {2013},
+  Number                   = {2},
+  Volume                   = {14},
+
+  Doi                      = {10.1007/s11121-010-0198-x},
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2017.04.28}
 }
 
 @Book{Bloom_Orr_etal_1993_jtpa,
@@ -16998,7 +16952,7 @@
   Owner                    = {The Detroyer}
 }
 
-@Article{Chen-Hong-Tarozzi_2008,
+@Article{Chen_Hong_Tarozzi_2008_GMM_AS,
   Title                    = {Semiparametric Efficiency in {GMM} Models with Auxiliary Data},
   Author                   = {Xiaohong Chen and Hong, Han and Tarozzi, Alessandro},
   Journal                  = {The Annals of Statistics},
@@ -19542,6 +19496,19 @@
   Doi                      = {10.1086/322078},
   Owner                    = {Tyas},
   Timestamp                = {2008.04.08}
+}
+
+@Article{Cornwell_Mustard_VanParys_2013_TJHR,
+  Title                    = {Noncognitive Skills and the Gender Disparities in Test Scores and Teacher Assessments: Evidence from Primary School},
+  Author                   = {Cornwell, Christopher and Mustard, David B. and Van Parys, Jessica},
+  Journal                  = {The Journal of Human Resources},
+  Year                     = {2013},
+  Number                   = {1},
+  Pages                    = {236--264},
+  Volume                   = {48},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2017.05.01}
 }
 
 @Article{Corsaro_2008_Policy-Practice,
@@ -22485,6 +22452,16 @@
   Address                  = {Upper Montclair, NJ},
 
   Timestamp                = {2008.04.02}
+}
+
+@Unpublished{Deshpande_Yue_2017_Screened_Unpublished,
+  Title                    = {Who Is Screened Out? Application Costs and the Targeting of Disability Program},
+  Author                   = {Deshpande, Manasi and Yue, Li},
+  Note                     = {Unpublished},
+  Year                     = {2017},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2017.05.14}
 }
 
 @Article{Desimone_1999_JoER,
@@ -29723,20 +29700,6 @@
   Address                  = {Chicago},
   Editor                   = {Friedman, Milton},
 
-  Owner                    = {Jenna},
-  Timestamp                = {2007.08.12}
-}
-
-@InCollection{Friedman_1953_MethodologyPositive,
-  Title                    = {The Methodology of Positive Economics},
-  Author                   = {Friedman, Milton},
-  Booktitle                = {Essays in Positive Economics},
-  Publisher                = {University of Chicago Press},
-  Year                     = {1953},
-
-  Address                  = {Chicago},
-  Editor                   = {Friedman, Milton},
-
   Timestamp                = {2007.08.12}
 }
 
@@ -29750,6 +29713,20 @@
   Address                  = {Chicago},
   Editor                   = {Friedman, Milton},
   Note                     = {Footnote 11},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2007.08.12}
+}
+
+@InCollection{Friedman1953,
+  Title                    = {The Methodology of Positive Economics},
+  Author                   = {Friedman, Milton},
+  Booktitle                = {Essays in Positive Economics},
+  Publisher                = {University of Chicago Press},
+  Year                     = {1953},
+
+  Address                  = {Chicago},
+  Editor                   = {Friedman, Milton},
 
   Owner                    = {Jenna},
   Timestamp                = {2007.08.12}
@@ -30640,10 +30617,10 @@
   Timestamp                = {2011.05.31}
 }
 
-@Article{Gao-etal_2013_PloSone,
+@Article{Gao_Hong_Dang_2013_PloSONE,
   Title                    = {Severity of anemia among children under 36 months old in rural western {C}hina},
   Author                   = {Gao, Wenlong and Yan, Hong and Dang, Shaonong and Pei, Leilei and others},
-  Journal                  = {PloS one},
+  Journal                  = {{PLoS} {ONE}},
   Year                     = {2013},
   Number                   = {4},
   Pages                    = {e62883},
@@ -32469,6 +32446,19 @@
   Timestamp                = {2008.08.11}
 }
 
+@Article{Golding_Fitzgerald_2017_IMHJ,
+  Title                    = {Psychology of Boys At Risk: Indicators From 0-5},
+  Author                   = {Golding, Paul and Fitzgerald, Hiram E.},
+  Journal                  = {Infant Mental Health Journal},
+  Year                     = {2017},
+  Number                   = {1},
+  Pages                    = {5--14},
+  Volume                   = {38},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2017.05.01}
+}
+
 @Book{Goldman_Friedlander_etal_1986_final,
   Title                    = {Final Report on the San Diego Job Search and Work Experience Demonstration},
   Author                   = {Goldman, Barbara and Friedlander, Daniel and Long, David},
@@ -32655,6 +32645,18 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2016.08.05}
+}
+
+@Article{Golsteyn_Schils_2014_EER,
+  Title                    = {Gender Gaps In Primary School Achievement: A Decomposition into Endowments and Returns to {IQ} and Non-cognitive Factors},
+  Author                   = {Golsteyn, Bart H. H. and Schils, Trudie},
+  Journal                  = {Economics of Education Review},
+  Year                     = {2014},
+  Pages                    = {176--187},
+  Volume                   = {41},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2017.05.01}
 }
 
 @Article{Gomby_Behrman_1999_FC,
@@ -32883,6 +32885,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
+}
+
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -32895,17 +32908,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
-}
-
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
@@ -34606,6 +34608,16 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
   Doi                      = {10.1111/1467-8624.00135},
   Timestamp                = {2008.04.08}
+}
+
+@Article{Gu-Koenker_2016_Bayesball-JAE,
+  Title                    = {Empirical Bayesball Remixed: Empirical Bayes Methods for Longitudinal Data},
+  Author                   = {Gu, Jiaying and Koenker, Roger},
+  Journal                  = {Journal of Applied Econometrics},
+  Year                     = {2016},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2017.05.08}
 }
 
 @Book{Guenon_2004_BOOKReignofQuantity,
@@ -43070,6 +43082,21 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2010.08.13}
 }
 
+@InBook{Hong_Raudenbush_2013_HetAgents_HCASR,
+  Title                    = {Heterogeneous Agents, Social Interactions, and Causal Inference},
+  Author                   = {Hong, Guanglei and Raudenbush, Stephen W.},
+  Editor                   = {Morgan, Stephen L.},
+  Pages                    = {331--352},
+  Publisher                = {Springer Netherlands},
+  Year                     = {2013},
+
+  Address                  = {Dordrecht},
+  Series                   = {Handbook of Causal Analysis for Social Research},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2017.04.28}
+}
+
 @PhdThesis{Hong_1998_PhD,
   Title                    = {Equilibrium and Econometric Models of Asymmetric Auctions},
   Author                   = {Han Hong},
@@ -44179,6 +44206,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Number                   = {1--2},
   Pages                    = {71--120},
   Volume                   = {58}
+}
+
+@Unpublished{Ichimura-Martinez-Sanchis_2009_Estimation,
+  Title                    = {Estimation and Inference of Models with Incomplete Data by Combining Two Data Sets},
+  Author                   = {Ichimura, Hidehiko and Martinez-Sanchis, Elena},
+
+  Month                    = {Feburary},
+  Year                     = {2009},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2017.05.09}
 }
 
 @Article{Ichimura_Taber_2002_AER,
@@ -48996,7 +49034,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {20}
 }
 
-@Unpublished{Kottelenberg-Lehrer_2014_Gender-Effects,
+@Unpublished{Kottelenberg_Lehrer_2014_Gender-Effects,
   Title                    = {The Gender Effects of Universal Child Care in {C}anada: Much Ado about Boys?},
   Author                   = {Kottelenberg, Michael J. and Lehrer, Steven F.},
   Note                     = {Unpublished manuscript, Department of Economics, Queen's University},
@@ -52781,6 +52819,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Year                     = {2001}
 }
 
+@Unpublished{Liu_etal_2016_Forecasting,
+  Title                    = {Forecasting with Dynamic Panel Data Models},
+  Author                   = {Liu, Laura and Moon, Hyungsik Roger and Schorfheide, Frank},
+
+  Month                    = {December},
+  Year                     = {2016},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2017.05.08}
+}
+
 @Article{Liu_1960_Econometrica,
   Title                    = {Underidentification, Structural Estimation, and Forecasting},
   Author                   = {Liu, T.C.},
@@ -53802,6 +53851,19 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
   Owner                    = {Jenna},
   Timestamp                = {2015.12.07}
+}
+
+@Article{Lundberg_2005_ParentalBehav_OREP,
+  Title                    = {Sons, Daughters, and Parental Behaviour},
+  Author                   = {Lundberg, Shelly},
+  Journal                  = {Oxford Review of Economic Policy},
+  Year                     = {2005},
+  Number                   = {3},
+  Pages                    = {340--356},
+  Volume                   = {21},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2017.05.01}
 }
 
 @TechReport{Lundberg_Pabilonia_etal_2006_TimeAllocation,
@@ -67324,6 +67386,19 @@ Robinson, Lara Rachel},
   Year                     = {2006}
 }
 
+@Article{Raudenbush_Bloom_2015_AJE,
+  Title                    = {Learning About and From a Distribution of Program Impacts Using Multisite Trials},
+  Author                   = {Raudenbush, Stephen W. and Bloom, Howard S.},
+  Journal                  = {American Journal of Evaluation},
+  Year                     = {2015},
+  Number                   = {4},
+  Pages                    = {475--499},
+  Volume                   = {36},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2017.04.28}
+}
+
 @Book{Raudenbush_Bryk_2001_BOOKHierarchicalLinearModels,
   Title                    = {Hierarchical Linear Models: Applications and Data Analysis Methods},
   Author                   = {Raudenbush, Stephen W. and Bryk, Anthony S.},
@@ -76557,6 +76632,19 @@ Robinson, Lara Rachel},
   Timestamp                = {2014.07.19}
 }
 
+@Article{Sullivan-etal_2003_IJF-Forecasting,
+  Title                    = {Forecast evaluation with shared data sets},
+  Author                   = {Sullivan, Ryan and Timmermann, Allan and White, Halbert},
+  Journal                  = {{I}nternational {J}ournal of {F}orecasting},
+  Year                     = {2003},
+  Number                   = {2},
+  Pages                    = {217-227},
+  Volume                   = {19},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2017.05.09}
+}
+
 @TechReport{Sum_Harrington_etal_2003_HiddenCrisis,
   Title                    = {The Hidden Crisis in the High School Dropout Problems of Young Adults in the {U.S.}: Recent Trends in Overall School Dropout Rates and Gender Differences in Dropout Behavior},
   Author                   = {Sum, Andrew and Harrington, Paul and Bartishevich, Charles and Fogg, Neeta and Khatiwada, Ishwar and Motroni, Jacqui and Palma, Sheila and Pond, Nathan and Tobar, Paulo and Trub'skyy, Mykhaylo},
@@ -82328,6 +82416,20 @@ early childhood education and pre-kindergarten programs},
   Timestamp                = {2007.11.28}
 }
 
+@Article{Weiss_Bloom_Brock_2014_Framework_JPAM,
+  Title                    = {A Conceptual Framework for Studying the Sources of Variation in Program Effects},
+  Author                   = {Weiss, Michael J. and Bloom, Howard S. and Brock, Thomas},
+  Journal                  = {Journal of Policy Analysis and Management},
+  Year                     = {2014},
+  Number                   = {3},
+  Pages                    = {778--808},
+  Volume                   = {33},
+
+  Doi                      = {10.1002/pam.21760},
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2017.04.28}
+}
+
 @Article{Weiss_1972_EJ,
   Title                    = {On the Optimal Lifetime Pattern of Labour Supply},
   Author                   = {Weiss, Yoram},
@@ -85185,7 +85287,7 @@ early childhood education and pre-kindergarten programs},
   Timestamp                = {2009.01.31}
 }
 
-@Book{Bruni-etal_2009_Cap-Happiness,
+@Book{Bruni_Comim_Pugno_2009_Cap-Happiness,
   Title                    = {Capabilities and Happiness},
   Editor                   = {Bruni, Luigino and Comim, Flavio and Pugno, Maurizio},
   Publisher                = {Oxford University Press},
@@ -85197,7 +85299,7 @@ early childhood education and pre-kindergarten programs},
   Timestamp                = {2016.05.29 (checked jld)}
 }
 
-@Book{Buchanan-Shortliffe_1984_MYCIN,
+@Book{Buchanan_Shortliffe_1984_MYCIN,
   Title                    = {Rule-Based Expert Systems: The {MYCIN} Experiments of the {S}tanford {H}euristic {P}rogramming {P}roject},
   Editor                   = {Buchanan, Bruce G. and Shortliffe, Edward H.},
   Publisher                = {Addison-Wesley Publishing Company},
@@ -85336,7 +85438,7 @@ early childhood education and pre-kindergarten programs},
   Timestamp                = {2009.09.07}
 }
 
-@Book{Dodge-Rutter_2011_Gene-Environment,
+@Book{Dodge_Rutter_2011_Gene-Environment,
   Title                    = {Gene-Environment Interactions in Developmental Psychopathology},
   Editor                   = {Dodge, Kenneth A. and Rutter, Michael},
   Publisher                = {Guilford Press},
@@ -86002,11 +86104,6 @@ early childhood education and pre-kindergarten programs},
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2016.06.23}
-}
-
-@TechReport{,
-  Owner                    = {Jenna},
-  Timestamp                = {2017.03.10}
 }
 
 @Misc{NewYorkTimes_2009_Flunk,
